--- a/_data/lecture_monitorering_av_moln_applikationer.yml
+++ b/_data/lecture_monitorering_av_moln_applikationer.yml
@@ -1,7 +1,7 @@
 ---
 contentTimeTotal:
   literatureTime: 33
-  optionalLiteratureTime: 0
+  optionalLiteratureTime: 44
 topics:
   - topic: "Monitoring i Azure"
     literatureTime: 0
@@ -81,7 +81,7 @@ topics:
         Learn how to send resource logs and event data from container groups in Azure Container Instances to Azure Monitor logs
   - topic: "Build measure learn"
     literatureTime: 14
-    optionalLiteratureTime: 0
+    optionalLiteratureTime: 22
     description-include: build_measure_learn.md
     literature:
     - title: "What Is Telemetry? How Telemetry Works, Benefits of Telemetry, Challenges, Tutorial, and More"
@@ -101,15 +101,21 @@ topics:
     optionalLiterature:
     - title: "DevOps Handbook Summary 2 of 4 - The Second Way"
       url: https://agilejazz.blogspot.com/p/the-devops-handbook-summary-2-of-4.html
+      timeType: Article
+      timeMinutes: 9
+      timeBadge: info
       description: >
         Book summary of  The DevOps Handbook  by Gene Kim et. al. Excerpted content is formatted in  italics .     Part IV: The Second Way - The Tec...
     - title: "How The Build-Measure-Learn Cycle Really Works"
       url: https://www.cleverism.com/how-build-measure-learn-cycle-really-works/
+      timeType: Article
+      timeMinutes: 13
+      timeBadge: info
       description: >
         A complete guide to understanding the build-measure-learn cycle including practical insights from Zappos beginnings.
   - topic: "Logging"
     literatureTime: 19
-    optionalLiteratureTime: 0
+    optionalLiteratureTime: 22
     description-include: logging.md
     literature:
     - title: "Logging in C# .NET Modern-day Practices: The Complete Guide"
@@ -131,7 +137,13 @@ topics:
       description: >
         Learn the essential do's and don'ts of logging with these 13 logging best practices, and take your logging approach to the next level.
     optionalLiterature:
-    - title: "The 10 commandments of logging - Masterzen’s Blog"
+    - title: "The 10 commandments of logging"
       url: https://www.masterzen.fr/2013/01/13/the-10-commandments-of-logging/
-    - title: "How Logging Made me a Better Developer - Erik Hazzard"
+      timeType: Article
+      timeMinutes: 14
+      timeBadge: info
+    - title: "How Logging Made me a Better Developer"
       url: http://vasir.net/blog/development/how-logging-made-me-a-better-developer
+      timeType: Article
+      timeMinutes: 8
+      timeBadge: info
